--- a/cv.tex
+++ b/cv.tex
@@ -86,18 +86,19 @@
   \textbf{Publications:}
   \begin{itemize}
   \item D. Ferguson, et al., ``Measuring Spin of the Remnant Black Hole from Maximum Amplitude'', Phys. Rev. Lett. 123, 151101 (2019) arXiv:1905.03756
+  \item LIGO Scientific Collaboration, ``Open data from the first and second observing runs of Advanced LIGO and Advanced Virgo'', submitted (2019) arXiv:1912.11716
   \item D. Ferguson, S. Gardner, and B. Yanny, ``Milky Way Tomography with K and M Dwarf Stars: The Vertical Structure of the Galactic Disk'', ApJ 843, 141 (2017) arXiv:1706.01900
     \item J. Healy, et al., ``Targeted numerical simulations of binary black holes for GW170104'', Phys. Rev. D 97, 064027 (2017) arXiv:1712.05836
   \end{itemize}
 
   \textbf{Presentations:}
   \begin{itemize}
-  \item Ferguson, D., et al (2020 Jan) ``Assessing the Readiness of Numerical Relativity for Future Gravitational Wave Detections'', 235th Meeting of the Americal Astronomical Society, Honolulu HI
-  \item Ferguson, D. (2019 June) ``Using Machine Learning to Optimize Placement of Numerical Relativity Simulations'', Machine Learning in Science and Engineering Conference, Atlanta GA
-  \item Ferguson, D., et al. (2019 May) ``Numerical Relativity Errors in LISA'', LISA Waveform Working Group Meeting, Golm Germany
-  \item Ferguson, D., et al. (2018 Apr) ``Revealing the Final Black Hole from Signal at Maximum Amplitude'', American Physical Society April Meeting, Columbus OH
-  \item Ferguson, D., et al. (2017 Oct) ``Apparent Horizon Dynamics of Binary Black Hole Systems'', Georgia Regional Astronomers Meeting, Athens GA
-  \item Powell, C., Ferguson, D. (2014 Apr) ``A Mobile Physics Engine Modeling Two Dimensional Elastic and Inelastic Collisions for the Educational Demonstration of Physics Phenomena''. National Conference on Undergraduate Research, Lexington KY  
+  \item \underline{D. Ferguson}, K. Jani, D. Shoemaker, (2020 Jan), poster and oral, ``Assessing the Readiness of Numerical Relativity for Future Gravitational Wave Detections'', 235th Meeting of the Americal Astronomical Society, Honolulu HI
+  \item \underline{D. Ferguson}, (2019 June), oral, ``Using Machine Learning to Optimize Placement of Numerical Relativity Simulations'', Machine Learning in Science and Engineering Conference, Atlanta GA
+  \item \underline{D. Ferguson}, K. Jani, D. Shoemaker, (2019 May), poster, ``Numerical Relativity Errors in LISA'', LISA Waveform Working Group Meeting, Golm Germany
+  \item \underline{D. Ferguson}, et al., (2018 Apr), oral, ``Revealing the Final Black Hole from Signal at Maximum Amplitude'', American Physical Society April Meeting, Columbus OH
+  \item \underline{D. Ferguson}, et al., (2017 Oct), oral, ``Apparent Horizon Dynamics of Binary Black Hole Systems'', Georgia Regional Astronomers Meeting, Athens GA
+  \item \underline{C. Powell}, \underline{D. Ferguson}, (2014 Apr), poster and oral, ``A Mobile Physics Engine Modeling Two Dimensional Elastic and Inelastic Collisions for the Educational Demonstration of Physics Phenomena''. National Conference on Undergraduate Research, Lexington KY  
   \end{itemize}
   
   \textbf{Leadership and Outreach:}
