Update CV February 2022

--- a/cv.bib
+++ b/cv.bib
@@ -200,10 +200,150 @@ archivePrefix = {arXiv},
 
 @article{Ferguson:2020xnm,
     author = "Ferguson, Deborah and Jani, Karan and Laguna, Pablo and Shoemaker, Deirdre",
-    title = "{Assessing the Readiness of Numerical Relativity for LISA and 3G Detectors}",
+    title = "{Assessing the readiness of numerical relativity for LISA and 3G detectors}",
     eprint = "2006.04272",
     archivePrefix = "arXiv",
     primaryClass = "gr-qc",
-    month = "6",
+    doi = "10.1103/PhysRevD.104.044037",
+    journal = "Phys. Rev. D",
+    volume = "104",
+    number = "4",
+    pages = "044037",
+    year = "2021"
+}
+
+@article{Abbott:2021iab,
+    author = {{LIGO Scientific and Virgo Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO",
+    title = "{Search for lensing signatures in the gravitational-wave observations from the first half of LIGO-Virgo's third observing run}",
+    eprint = "2105.06384",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    reportNumber = "LIGO-P2000400",
+    month = "5",
+    year = "2021"
+}
+
+@article{Abbott:2021jiu,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, Virgo, KAGRA",
+    title = "{Constraints from LIGO O3 data on gravitational-wave emission due to r-modes in the glitching pulsar PSR J0537-6910}",
+    eprint = "2104.14417",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    reportNumber = "LIGO-P2100069",
+    month = "4",
+    year = "2021"
+}
+
+@article{Abbott:2021jel,
+    author = "Abbott, R. and others",
+    collaboration =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    title = "{Search for anisotropic gravitational-wave backgrounds using data from Advanced LIGO's and Advanced Virgo's first three observing runs}",
+    eprint = "2103.08520",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    reportNumber = "LIGO-P2000500",
+    month = "3",
+    year = "2021"
+}
+
+@article{Abbott:2021ksc,
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, Virgo, KAGRA",
+    title = "{Constraints on cosmic strings using data from the third Advanced LIGO-Virgo observing run}",
+    eprint = "2101.12248",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    reportNumber = "LIGO-P2000506",
+    month = "1",
+    year = "2021"
+}
+
+@article{Abbott:2021xxi,
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, Virgo, KAGRA",
+    title = "{Upper Limits on the Isotropic Gravitational-Wave Background from Advanced LIGO's and Advanced Virgo's Third Observing Run}",
+    eprint = "2101.12130",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    reportNumber = "LIGO-DCC-P2000314",
+    month = "1",
+    year = "2021"
+}
+
+@article{Abbott:2020ilb,
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, Virgo, KAGRA",
+    title = "{Diving below the spin-down limit: Constraints on gravitational waves from the energetic young pulsar PSR J0537-6910}",
+    eprint = "2012.12926",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    reportNumber = "LIGO-P2000407",
+    month = "12",
+    year = "2020"
+}
+
+@article{Abbott:2020mev,
+    author = {{LIGO Scientific and Virgo Collaborations}},
+    collaboration = "LIGO Scientific, Virgo",
+    title = "{All-sky search in early O3 LIGO data for continuous gravitational-wave signals from unknown neutron stars in binary systems}",
+    eprint = "2012.12128",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    reportNumber = "LIGO-P2000298",
+    doi = "10.1103/PhysRevD.103.064017",
+    journal = "Phys. Rev. D",
+    volume = "103",
+    number = "6",
+    pages = "064017",
+    year = "2021"
+}
+
+@article{Abbott:2020yvp,
+    author = {{LIGO Scientific and Virgo Collaborations}},
+    collaboration = "LIGO Scientific, Virgo",
+    title = "{Search for Gravitational Waves Associated with Gamma-Ray Bursts Detected by Fermi and Swift During the LIGO-Virgo Run O3a}",
+    eprint = "2010.14550",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    reportNumber = "LIGO-P2000040",
+    month = "10",
+    year = "2020"
+}
+
+@article{Abbott:2020gyp,
+    author = {{LIGO Scientific and Virgo Collaborations}},
+    collaboration = "LIGO Scientific, Virgo",
+    title = "{Population Properties of Compact Objects from the Second LIGO-Virgo Gravitational-Wave Transient Catalog}",
+    eprint = "2010.14533",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    reportNumber = "LIGO-P2000077",
+    month = "10",
+    year = "2020"
+}
+
+@article{Abbott:2020jks,
+    author = {{LIGO Scientific and Virgo Collaborations}},
+    collaboration = "LIGO Scientific, Virgo",
+    title = "{Tests of General Relativity with Binary Black Holes from the second LIGO-Virgo Gravitational-Wave Transient Catalog}",
+    eprint = "2010.14529",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    reportNumber = "LIGO-P2000091",
+    month = "10",
+    year = "2020"
+}
+
+@article{Abbott:2020niy,
+    author = {{LIGO Scientific and Virgo Collaborations}},
+    collaboration = "LIGO Scientific, Virgo",
+    title = "{GWTC-2: Compact Binary Coalescences Observed by LIGO and Virgo During the First Half of the Third Observing Run}",
+    eprint = "2010.14527",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    reportNumber = "P2000061",
+    month = "10",
     year = "2020"
 }
